--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>9.0.31</version>
+		</dependency>
+		
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>5.2.3.RELEASE</version>
